kubernetes/apps/monitoring/thanos/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: thanos.png
    gethomepage.dev/name: Thanos
    gethomepage.dev/group: Storage
spec:
  hostnames: ["thanos.chestr.dev"]
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          namespace: monitoring
          port: 9090
